--- a/androidapi/app/build.gradle
+++ b/androidapi/app/build.gradle
@@ -14,6 +14,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    lintOptions {
+        abortOnError false
+    }
 }
 
 dependencies {
@@ -21,6 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile files('libs/classes.jar')
+    compile files('libs/aspectjrt-1.8.9.jar')
 }
 
 // 移除舊的 jar 檔
